# add-gtest

./: CMakeLists.txt  LICENSE  README.md  add-gtest.cmake
example/: CMakeLists.txt  test.1.gtest.h  test.2.gtest.h
